[package]
name = "rust-music-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cpal = "0.17.3"
ringbuf = "0.4.8"
symphonia = { version = "0.5.5", features = ["mp3", "flac", "aac", "wav", "ogg"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
